@@ -5,7 +5,7 @@
 CXXFLAGS=$(CWARNINGS) $(COPTIM) $(CPEDANTIC) $(INCLUDE2)
 LIBS=$(OTHERLIBS)
 
-OBJS=MachineComponent.o MVME187Machine.o TestMIPSMachine.o
+OBJS=MachineComponent.o MVME187Machine.o TestM88KMachine.o TestMIPSMachine.o
 
 all: $(OBJS)
 
